initialization-dimensions/EC-P.txt
main.cpp:115:8: error: expected ';' at end of declaration
    T o s;
       ^
       ;
main.cpp:116:7: error: no matching constructor for initialization of 'T'
    T u = s;
      ^   ~
main.cpp:29:5: note: candidate constructor not viable: no known conversion from 'T' to 'int' for 1st argument
    T(int a)
    ^
main.cpp:20:5: note: candidate constructor not viable: requires 0 arguments, but 1 was provided
    T()
    ^
main.cpp:38:5: note: candidate constructor not viable: requires 2 arguments, but 1 was provided
    T(int a, int b)
    ^
main.cpp:122:7: error: no matching constructor for initialization of 'T'
    T u = (s);
      ^   ~~~
main.cpp:29:5: note: candidate constructor not viable: no known conversion from 'T' to 'int' for 1st argument
    T(int a)
    ^
main.cpp:20:5: note: candidate constructor not viable: requires 0 arguments, but 1 was provided
    T()
    ^
main.cpp:38:5: note: candidate constructor not viable: requires 2 arguments, but 1 was provided
    T(int a, int b)
    ^
main.cpp:128:7: error: no matching constructor for initialization of 'T'
    T u = {s};
      ^   ~~~
main.cpp:29:5: note: candidate constructor not viable: no known conversion from 'T' to 'int' for 1st argument
    T(int a)
    ^
main.cpp:20:5: note: candidate constructor not viable: requires 0 arguments, but 1 was provided
    T()
    ^
main.cpp:38:5: note: candidate constructor not viable: requires 2 arguments, but 1 was provided
    T(int a, int b)
    ^
4 errors generated.
